# war

./: .gitignore
backend/: .env  Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml
frontend/src/: main.rs  models.rs
frontend/src/components/: table.rs
frontend/templates/: index.html
