[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
chrono = { version = "0.4", features = ["serde"]}
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
